# technical-papers-chatbot

./: .gitignore  README.md  config.py  document_chunker.py  main.py  pyproject.toml  util.py
core/: rag_system.py
